style.css
:root {
    --color-dark: hsl(0, 0%, 20%);
}

body {
    margin: 0;
}

header,
footer {
    background-color: var(--color-dark);
    color: white;
    height: 3rem;
    font-size: 1.2rem;

    display: flex;
    justify-content: center;
    align-items: center;
}

.library {
    box-sizing: border-box;
    min-height: calc(100vh - 12rem);
    margin: 3rem 12rem;
    
    display: grid;
    grid-template-columns: repeat(auto-fill, 11rem);
    grid-template-rows: 1fr 1fr 1fr;
    gap: 1rem;
    justify-content: center;
    align-items: center;
}

.card {
    box-sizing: border-box;
    height: 13.5rem;
    border: 1px solid var(--color-dark);
    border-radius: 0.5rem;
    border-left: 0.5rem solid var(--color-dark);
    padding: 3rem 1rem;
    
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 1rem;

    position: relative;
}

.card:last-of-type {
    border: 1px dashed var(--color-dark);
    padding: 0;
}

.title {
    font-size: 1.2rem;
    font-weight: bold;
    text-align: center;
}

.author {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 0.3rem;
}

.pages {
    position: absolute;
    bottom: 1rem;
    left: 1rem;
}

dialog {
    width: 15rem;
    border-radius: 0.5rem;
    border: none;
    box-shadow: 0 0 20px var(--color-dark);
    padding: 1rem;
    
    position: fixed;
}

#dialog-remove {
    width: 25rem;
    padding-top: 3rem;
}

#dialog-remove > div {
    text-align: center;

    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 2rem;
}

#book-detail {
    font-weight: bold;
}

#dialog-remove > div > div:last-of-type {
    display: flex;
    gap: 1rem;
}

::backdrop {
    background-color: black;
    opacity: 50%;
}

form {
    display: flex;
    flex-direction: column;
}

form div {
    margin: 1rem 0;

    display: flex;
    justify-content: center;
    align-items: end;
}

div label {
    margin-left: 0;
    margin-right: 1rem;
}

label,
input,
#add {
    margin-left: 1rem;
    margin-right: 1rem;
}

/* input */
input[type="text"],
input[type="number"] {
    border-radius: 0.5rem;
    border: none;
    background-color: hsl(0, 0%, 90%);
    margin-bottom: 1rem;
    line-height: 1.5rem;
    text-indent: 0.5rem;
}

input[type="text"]:focus,
input[type="number"]:focus {
    outline: none;
    box-shadow: 0 0 10px var(--color-dark);
}

#read {
    height: 1.5rem;
    width: 1.5rem;
    margin: 0; 
}

#read:checked {
    accent-color: var(--color-dark);
}

/* button */
.library button,
#close {
    border: none;
    background-color: transparent;
    padding: 0;

    display: flex;
}

#addBook {
    height: 15rem;
    width: 11rem;
    justify-content: center;
    align-items: center;
}

#addBook:focus,
.removeBook:focus,
#close:focus {
    outline: none;
}

.removeBook {
    position: absolute;
    top: 0.5rem;
    right: 0.5rem;
}

.toggleRead {
    height: 1.5rem;
    width: 4rem;
    border-radius: 0.5rem;
    font-size: 0.8rem;
    font-weight: bold;

    justify-content: center;
    align-items: center;

    position: absolute;
    bottom: 0.8rem;
    right: 0.8rem;
}

.toggleRead.true {
    background-color: hsl(120, 100%, 80%);
}

.toggleRead.false {
    background-color: hsl(0, 100%, 80%);
}

#close {
    margin-bottom: 1rem;
    font-size: 1.2rem;
    font-weight: bold;

    align-self: flex-end;
}

#add {
    background-color: var(--color-dark);
    color: white;
    border-radius: 0.5rem;
    border: none;
    margin-top: 1rem;
    margin-bottom: 1rem;
    font-size: 2rem;
}

#dialog-remove button {
    background-color: var(--color-dark);
    color: white;
    height: 2rem;
    width: 6rem;
    border-radius: 0.5rem;
    border: none;
    font-weight: bold;
}

/* img */
footer img {
    height: calc(3rem * 0.6);
}

.removeBook img {
    height: 2rem;
}

/* a */
a {
    text-decoration: none;
    color: white;
}

footer a {
    display: flex;
    align-items: end;
    gap: 0.5rem;
}

/* media */
@media (orientation: portrait) {
    .library {
        margin: 3rem;
    }

    .card:last-of-type {
        height: calc(50px + 1rem);
        width: calc(50px + 1rem);
        
        position: fixed;
        bottom: 5rem;
        right: 2rem;
    }

    #addBook {
        height: auto;
        width: auto;
    }
}

